# doc_processor

./: .dockerignore  Dockerfile  README.md  app.py  fly.toml  handler.py  main.py  preload_models.py  preloader.py  processor.py  pyproject.toml  requirements.txt  test_input.json
